force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/Padr_o_Engenharia_Clinica__c.object-meta.xml
<CustomObject>
    <label>Ferramenta Utilizada</label>
    <nameField>
        <label>Nome da Ferramenta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ferramentas Utilizadas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>