force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/fields/Data_da_Pr_xima_Calibra_o__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Pr_xima_Calibra_o__c</fullName>
    <label>Data da Próxima Calibração</label>
    <type>Date</type>
</CustomField>