force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/fields/ID_Tag_da_Ferramenta__c.field-meta.xml
<CustomField>
    <fullName>ID_Tag_da_Ferramenta__c</fullName>
    <label>ID/Tag da Ferramenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>