force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <length>50</length>
    <type>Text</type>
</CustomField>