force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/fields/N_mero_de_S_rie__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_S_rie__c</fullName>
    <label>Número de Série</label>
    <length>100</length>
    <type>Text</type>
</CustomField>