force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/fields/Nota_Fiscal_N__c.field-meta.xml
<CustomField>
    <fullName>Nota_Fiscal_N__c</fullName>
    <label>Nota Fiscal N°</label>
    <type>TextArea</type>
</CustomField>