force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/fields/Residual__c.field-meta.xml
<CustomField>
    <fullName>Residual__c</fullName>
    <label>% Residual</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>