force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPERACIONAL</fullName>
            </value>
            <value>
                <fullName>DESATIVADO</fullName>
            </value>
            <value>
                <fullName>EM CALIBRAÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>