force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/fields/Status_da_Calibracao__c.field-meta.xml
<CustomField>
    <fullName>Status_da_Calibracao__c</fullName>
    <formula>IF(TODAY() &lt; Data_da_Pr_xima_Calibra_o__c -15, IMAGE(&quot;https://hospcom--c.na25.content.force.com/servlet/servlet.FileDownload?file=0153100000815oV&quot;, &quot;&quot; ,15, 15) , 


IF(AND(TODAY()+15 &gt; Data_da_Pr_xima_Calibra_o__c, TODAY() &lt; Data_da_Pr_xima_Calibra_o__c), IMAGE(&quot;https://hospcom--c.na49.content.force.com/servlet/servlet.ImageServer?id=0153100000815oa&amp;oid=00Di0000000JVhH&amp;lastMod=1474642985000&quot;, &quot;&quot; ,15, 15) ,

 IMAGE(&quot;https://hospcom--c.na25.content.force.com/servlet/servlet.FileDownload?file=0153100000815of&quot;, &quot;&quot; ,15, 15)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status da Calibração</label>
    <type>Text</type>
</CustomField>