force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/fields/TL__c.field-meta.xml
<CustomField>
    <fullName>TL__c</fullName>
    <label>Tipo da Leitura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIGITAL</fullName>
            </value>
            <value>
                <fullName>ANALÓGICA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>