force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/fields/Valor_da_Ferramenta__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_Ferramenta__c</fullName>
    <label>Valor da Ferramenta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>