force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/validationRules/DESATIVACAO_DE_FERRAMENTA.validationRule-meta.xml
<ValidationRule>
    <fullName>DESATIVACAO_DE_FERRAMENTA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Data_da_Desativa_o__c),ISPICKVAL( Status__c,&quot;DESATIVADO&quot;) )</errorConditionFormula>
    <errorDisplayField>Data_da_Desativa_o__c</errorDisplayField>
    <errorMessage>PREENCHA A DATA DE DESATIVAÇÃO DO EQUIPAMENTO.</errorMessage>
</ValidationRule>