force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ID_Tag_da_Ferramenta__c</columns>
    <columns>Marca__c</columns>
    <columns>Modelo__c</columns>
    <columns>N_mero_de_S_rie__c</columns>
    <columns>Status_da_Calibracao__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>