force-app/main/default/objects/Padr_o_Engenharia_Clinica__c/listViews/All_3.listView-meta.xml
<ListView>
    <fullName>All_3</fullName>
    <columns>NAME</columns>
    <columns>Marca__c</columns>
    <columns>Modelo__c</columns>
    <columns>ID_Tag_da_Ferramenta__c</columns>
    <columns>N_mero_de_S_rie__c</columns>
    <columns>Data_da_Ultima_Calibra_o__c</columns>
    <columns>Data_da_Pr_xima_Calibra_o__c</columns>
    <columns>Status_da_Calibracao__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>TESTE</value>
    </filters>
    <label>Todos as Ferramentas [Editar]</label>
</ListView>